@@ -28,12 +28,13 @@ $files =
    'en/token_reject'            => ['Rejected token $TOKEN',                           'us-ascii', '7bit'],
    'en/token_reject_owner'      => ['Token rejected by $REJECTER',                     'us-ascii', '7bit'],
    'en/token_remind'            => ['REMINDER from $LIST',                             'us-ascii', '7bit'],
-   'en/help/default'            => ['Default help file',                               'us-ascii', '7bit'],
+   'en/help/help'               => ['Default help file',                               'us-ascii', '7bit'],
    'en/help/commands'           => ['Overview of available commands',                  'us-ascii', '7bit'],
    'en/help/parser'             => ['Information about the text parser',               'us-ascii', '7bit'],
    'en/help/patterns'           => ['Information about Majordomo patterns',            'us-ascii', '7bit'],
    'en/help/subscribe'          => ['Help on subscribing',                             'us-ascii', '7bit'],
    'en/help/topics'             => ['Available help topics',                           'us-ascii', '7bit'],
+   'en/help/unknowntopic'       => ['Unknown topic',                                   'us-ascii', '7bit'],
    'en/help/admin'              => ['Available admin help topics',                     'us-ascii', '7bit'],
    'en/help/admin_commands'     => ['Overview of available administrative commands',   'us-ascii', '7bit'],
    'en/help/admin_configuration'=> ['Overview of configuration variables and methods', 'us-ascii', '7bit'],
